src/styles/scss/_hero.scss
@use './vars' as *;

.hero {
  height: 100svh;
  min-height: 1080px;
  width: 100vw; 
  display: flex;
  align-items: center;
  overflow: hidden;

  overflow-x: hidden;

  .video, video {
    position: absolute;
    left: unset;
    right: 0;
    top: 0;
    bottom: 0;
    margin: auto;
    z-index: 1;

    width: 65vw; 
    min-height: 1080px;
    height: 100vh;
    
    pointer-events: none; 
  }

  .video {
    // background-image: url("/images/hero.jpg");
    // background-size: cover;
    // background-position: center;
    // background-repeat: no-repeat;
    display: flex;
    align-items: center;
    justify-content: center;

    img {
      width: 100%;
    }
  }
 

  &__title {
    position: absolute;
    position: relative;
    pointer-events: none;
    z-index: 999;

    small {
      display: block;
      margin: 0 0 10px 0;

      font-size: clamp(24px, 3vw, 36px);
      font-family: $main-font-title;
      font-weight: 400;
      letter-spacing: -0.01em;
    }

    h1 {
      font-size: clamp(100px, 22vw, 200px);
      line-height: 0.76;

      .word:nth-child(odd) {
        &:nth-child(3) {
          span:nth-child(2) {
            margin-left: .5vw;

            // background-color: red;
            @media (max-width: 780px) {
              margin-left: 1.5vw;
            }

            @media (max-width: 480px) {
              margin-left: 1.5vw;
            }
          }

          span:nth-child(3) {
            margin-left: -1vw;
            // background-color: yellow;
          }

          span:nth-child(4) {
            margin-left: -1vw;
            // background-color: green;
          }

          span:nth-child(5) {
            margin-left: -1vw;
            // background-color: brown;
            transform-origin: 50% 30%;
            animation: rotateAsterisk 22s linear infinite;
          }

          @keyframes rotateAsterisk {
            from {
              transform: rotate(0deg);
            }

            to {
              transform: rotate(360deg);
            }
          }
        }
      }
    }
  }
  .logo { 
    top: 0%;
    left: 4%;
  }
}

